chore: menu-css | aligns and fixes
chore: menu-css | aligns and fixes

--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -37,7 +37,7 @@
   height: 3.5rem;
   margin-right: 0.5rem;
   width: 8rem;
-  font-size: 0.9rem;
+  font-size: 1rem;
   font-weight: 700;
   text-transform: uppercase;
   border-radius: 2px;
