--- a/FrontEnd/src/css/menu.css
+++ b/FrontEnd/src/css/menu.css
@@ -1,4 +1,5 @@
 .aluno {
+    width: 100%;
     text-align: center;
 }
 
@@ -7,25 +8,89 @@
 }
 
 .controlos {
-    width: 100%;    
+    width: 100%;
 }
 
-.btnMenu {
+.btnMenu1 {
     display: flex;
     flex-direction: row;
     align-items: center;
     width:100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding:0.7rem 0 0.7rem 4.7rem; 
     font-size:15px;
     border: 0;
     background: none;
+    background: linear-gradient(to left, rgba(255,255,255,0) 50%, #ec6055 50%) right;
+    background-size: 200%;
+    transition: .2s ease-out;
 }
 
-.btnMenu:hover {
-    background-color: #ec6055;
+.btnMenu2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width:100%;
+    padding:0.7rem 0 0.7rem 4.7rem; 
+    font-size:15px;
+    border: 0;
+    background: none;
+    background: linear-gradient(to left, rgba(255,255,255,0) 50%, #3A79BD 50%) right;
+    background-size: 200%;
+    transition: .2s ease-out;
 }
 
+.btnMenu3 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width:100%;
+    padding:0.7rem 0 0.7rem 4.7rem; 
+    font-size:15px;
+    border: 0;
+    background: none;
+    background: linear-gradient(to left, rgba(255,255,255,0) 50%, #AFD079 50%) right;
+    background-size: 200%;
+    transition: .2s ease-out;
+}
+
+.btnMenu4 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width:100%;
+    padding:0.7rem 0 0.7rem 5rem; 
+    font-size:15px;
+    border: 0;
+    background: none;
+    background: linear-gradient(to left, rgba(255,255,255,0) 50%, #FAB735 50%) right;
+    background-size: 200%;
+    transition: .2s ease-out;
+}
+
+.btnMenu1:hover {
+    cursor: pointer;
+    background-position: left;
+    color: white;
+}
+.btnMenu2:hover {
+    cursor: pointer;
+    background-position: left;
+    color: white;
+}
+.btnMenu3:hover {
+    cursor: pointer;
+    background-position: left;
+    color: white;
+}
+.btnMenu4:hover {
+    cursor: pointer;
+    background-position: left;
+    color: white;
+}
 .btnMenuIcon {
     margin-right: 1rem;
+}
+
+.rodapeLogo {
+    margin-top: 1rem;
 }
