--- a/FrontEnd/src/css/plataforma.css
+++ b/FrontEnd/src/css/plataforma.css
@@ -10,10 +10,9 @@
 .colEsq {
     display:flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: space-around;
     height: 100vh;
     width: 15%; 
-    justify-content: space-around;
     background-image: url(bgMenu.svg);
     background-repeat: no-repeat;
     background-size: cover;
